# rust-postgres-sqlx

./: .editorconfig  .env  Cargo.toml  README.md  api.http  docker-compose.yml
config/: servers.json
migrations/: 20241112144552_create_notes_table.up.sql
src/: handler.rs  main.rs  model.rs
todo-driver/: Cargo.toml
todo-driver/src/: models.rs  startup.rs
todo-driver/src/routes/: todo.rs
